# esp32_smart_dryer

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  app_nvs.c  app_nvs.h  credentials.h  http_server.c  http_server.h  main.c  mqtt_app.c  mqtt_app.h  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
